0.0.2 filtrage, import+ search + tab + details , all working !
